added ground work for the projects

--- a/templates/components/footer.html
+++ b/templates/components/footer.html
@@ -16,7 +16,7 @@
           <h3 class="text-indigo-300 font-medium mb-3">Links</h3>
           <ul class="space-y-2 text-sm">
             <li><a href="/food" class="hover:text-indigo-300 transition-colors" hx-get="/food" hx-target="#content-area" hx-push-url="true">Cooking With Deepesh Kalura</a></li>
-            <!-- <li><a href="/projects" class="hover:text-indigo-300 transition-colors" hx-get="/projects" hx-target="#content-area" hx-push-url="true">Recent Projects</a></li> -->
+            <li><a href="/projects" class="hover:text-indigo-300 transition-colors" hx-get="/projects" hx-target="#content-area" hx-push-url="true">All Projects</a></li>
             <!-- <li><a href="/blog" class="hover:text-indigo-300 transition-colors" hx-get="/blog" hx-target="#content-area" hx-push-url="true">Thoughts</a></li> -->
           </ul>
         </div>
